--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="btn_select_activity">Select an activity</string>
     <string name="try_again">Try Again</string>
     <string name="check_connection">Check your internet connection!</string>
+    <string name="tv_welcome">Welcome to\n Are You Boring app!</string>
+    <string name="tv_enter_your_name">Please enter your name</string>
+    <string name="hint_name">Name</string>
+    <string name="btn_submit">Submit</string>
 </resources>
